--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/lab": "^7.0.0-beta.17",
     "@mui/material": "^7.3.2",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.13",
     "matter-js": "^0.20.0",
     "react": "^19.1.0",
