--- a/package.json
+++ b/package.json
@@ -9,21 +9,36 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "convert-images": "node scripts/convert-images.mjs",
-    "build:prod": "npm run convert-images && npm run build"
+    "build:prod": "npm run convert-images && npm run build",
+    "youtube:add": "node scripts/generate-youtube-api.js add",
+    "youtube:list": "node scripts/generate-youtube-api.js list",
+    "youtube:rotate": "node scripts/generate-youtube-api.js rotate",
+    "youtube:test": "node scripts/generate-youtube-api.js test",
+    "youtube:setup": "node scripts/generate-youtube-api.js setup",
+    "youtube:auto": "node scripts/auto-generate-api.js",
+    "youtube:server": "node scripts/api-key-server.js",
+    "youtube:start": "bash scripts/start-automation.sh",
+    "youtube:start:win": "scripts/start-automation.bat"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@headlessui/react": "^2.2.9",
     "@mui/icons-material": "^7.3.2",
     "@mui/lab": "^7.0.0-beta.17",
     "@mui/material": "^7.3.2",
     "@vercel/analytics": "^1.5.0",
+    "axios": "^1.12.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "framer-motion": "^12.23.13",
+    "lucide-react": "^0.544.0",
     "matter-js": "^0.20.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-intersection-observer": "^9.16.0"
+    "react-intersection-observer": "^9.16.0",
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
