--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "scrape-intelligent-api": "node scripts/run-intelligent-scraper-api.js",
     "enhanced-schema": "node scripts/enhanced-schema-update.js",
     "enhanced-scraper": "node scripts/enhanced-intelligent-scraper.js",
+    "enhanced-schema-api": "node scripts/run-enhanced-schema-api.js",
     "railway:login": "railway login",
     "railway:init": "railway init",
     "railway:add-db": "railway add postgresql",
