--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
+    "yt-dlp-wrap": "^2.5.3",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3"
   },
