Add enhance videos API endpoint for quality scoring existing videos

--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "enhanced-schema-api": "node scripts/run-enhanced-schema-api.js",
     "enhanced-scraper-api": "node scripts/run-enhanced-scraper-api.js",
     "enhance-existing-videos": "node scripts/simple-enhanced-scraper.js",
+    "enhance-videos-api": "node scripts/run-enhance-videos-api.js",
     "railway:login": "railway login",
     "railway:init": "railway init",
     "railway:add-db": "railway add postgresql",
