--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "framer-motion": "^12.23.13",
     "lucide-react": "^0.544.0",
     "matter-js": "^0.20.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
