--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "vite": "^7.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -56,7 +57,6 @@
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
     "sharp": "^0.34.4",
-    "tailwindcss": "^3.4.17",
-    "vite": "^7.0.4"
+    "tailwindcss": "^3.4.17"
   }
 }
